[tool.poetry]
name = "arraytex"
version = "0.0.9"
description = "ArrayTeX"
authors = ["Dom Batten <dominic.batten@googlemail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dbatten5/arraytex"
repository = "https://github.com/dbatten5/arraytex"
documentation = "https://arraytex.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/dbatten5/arraytex/releases"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.1"
numpy = "^1.24.2"
pyperclip = "^1.8.2"
typing-extensions = "^4.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^6.1"}
xdoctest = {extras = ["colors"], version = "*"}

[tool.poetry.group.dev.dependencies]
typeguard = "*"
safety = "^2.2.0"
mypy = "*"
black = "*"
pre-commit = "^2.16.0"
pep8-naming = "*"
darglint = "*"
reorder-python-imports = "*"
pre-commit-hooks = "^4.0.1"
Pygments = "^2.9.0"
ruff = "*"
pyupgrade = ">=2.29.1"

[tool.poetry.group.docs.dependencies]
furo = ">=2021.11.12"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
arraytex = "arraytex.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["arraytex", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
  "pyperclip.*",
]
ignore_missing_imports = true

[tool.ruff]
ignore = [
  'B019',
  'D203',
  'D204',
  'D213',
  'D215',
  'D400',
  'D404',
  'D406',
  'D407',
  'D408',
  'D409',
  'D413',
  'E501'
]
line-length = 80
select = [
    'B',
    'B9',
    'D',
    'E',
    'F',
    'N',
    'S',
    'W',
    'I001'
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = 'google'

[tool.ruff.isort]
force-single-line = true
lines-after-imports = 2

[tool.ruff.per-file-ignores]
"__init__.py" = ['F401']
"tests/*" = [
    'S101',
    'D212',
    'D415',
    'D205',
    'D104',
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
